force-app/main/default/objects/bpats__ATS_SMS_Integration__mdt/bpats__ATS_SMS_Integration__mdt.object-meta.xml
<CustomObject>
    <label>ATS SMS Integration</label>
    <pluralLabel>ATS SMS Integrations</pluralLabel>
</CustomObject>