force-app/main/default/objects/bpats__ATS_SMS_Integration__mdt/fields/bpats__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_ID__c</fullName>
    <label>Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>