force-app/main/default/objects/bpats__ATS_SMS_Integration__mdt/fields/bpats__Authentication_Token__c.field-meta.xml
<CustomField>
    <fullName>bpats__Authentication_Token__c</fullName>
    <label>Authentication Token</label>
    <type>TextArea</type>
</CustomField>