force-app/main/default/objects/bpats__ATS_SMS_Integration__mdt/fields/bpats__From_Number__c.field-meta.xml
<CustomField>
    <fullName>bpats__From_Number__c</fullName>
    <label>From Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>