force-app/main/default/objects/bpats__ATS_SMS_Integration__mdt/fields/bpats__URL__c.field-meta.xml
<CustomField>
    <fullName>bpats__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>